--- a/wphtml.com/html/tf/ascent-tailwind/index.html
+++ b/wphtml.com/html/tf/ascent-tailwind/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proton Kids </title>
+    <title>Proton Academy </title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
     <!-- fontawesome -->
@@ -30,7 +30,7 @@
                         <div>
                             <a href="index.html" class="flex items-center gap-1">
                                 <img src="assets/images/logo.png" alt="img" width="120" height="100">
-                                <span class="font-bold text-3xl ">Proton kids</span>
+                                <span class="font-bold text-3xl ">Proton Academy</span>
                             </a>
                         </div>
                         <div class="flex items-center">
@@ -49,7 +49,7 @@
                                     <div class="flex justify-between items-center">
                                         <a href="#" class="flex items-center gap-1">
                                             <img src="assets/images/logo.png" alt="img">
-                                            <span class="font-bold text-3xl ">Ascent</span>
+                                            <span class="font-bold text-3xl ">Proton Academy</span>
                                         </a>
                                         <div class="bg-primary w-10 h-10 text-cream-foreground flex items-center justify-center rounded-[4px] left-4 offcanvaClose">
                                             <i class="fa-solid fa-xmark text-xl"></i>
@@ -877,7 +877,9 @@
                     <ul class="flex flex-col gap-[15px] pt-5">
                         <li>
                             <p class="text-[#686868] flex items-center gap-4"> 
-                                <span class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-green-foreground"><i class="fa-solid fa-location-dot"></i></span> <span  class="max-w-[168px]">1179 KFC Road, Lisbon, Portugal</span>
+                                <span class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-green-foreground"><i class="fa-solid fa-location-dot"></i></span> <span  class="max-w-[168px]">Proton Academy,
+13/B1, Kesari Street, Opp. Eden Hall,
+Nagercoil - 629 001</span>
                             </p>
                         </li>
                         <li>
