--- a/wphtml.com/html/tf/ascent-tailwind/index.html
+++ b/wphtml.com/html/tf/ascent-tailwind/index.html
@@ -879,7 +879,7 @@
                             <p class="text-[#686868] flex items-center gap-4"> 
                                 <span class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-green-foreground"><i class="fa-solid fa-location-dot"></i></span> <span  class="max-w-[168px]">Proton Academy,
 13/B1, Kesari Street, Opp. Eden Hall,
-Nagercoil - 629 001</span>
+Nagercoil-629001</span>
                             </p>
                         </li>
                         <li>
