--- a/wphtml.com/html/tf/ascent-tailwind/index.html
+++ b/wphtml.com/html/tf/ascent-tailwind/index.html
@@ -878,7 +878,7 @@
                         <li>
                             <p class="text-[#686868] flex items-center gap-4"> 
                                 <span class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-green-foreground"><i class="fa-solid fa-location-dot"></i></span> <span  class="max-w-[168px]">Proton Academy,
-13/B1, Kesari Street, Opp. Eden Hall,
+13/B1,Kesari Street, Opp to Eden Hall,
 Nagercoil-629001</span>
                             </p>
                         </li>
